--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
+    "apexcharts": "^5.3.4",
     "axios": "^1.11.0",
     "jwt-decode": "^4.0.0",
     "react": "^19.1.1",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.48.2",
     "react-icons": "^5.5.0",
